implement git_config and add more tests (#88)
* implement git_config and add more tests

* Add credential